UI updates || predeployment // need curated content from client

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CLOUDINARY_API_SECRET = CLOUDINARY_URL=cloudinary://599231579757168:YBjUEtyPVh53Y6LVfZMoVrYUHQs@https-gilb03-github-io
+MONGODB_URI = 'mongodb://localhost:27017/abroad_connect'
