--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "abroad-connect",
   "version": "1.0.0",
@@ -11,6 +10,8 @@
   "author": "Gil B.",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.1.0",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.14.0",
     "connect-flash": "^0.1.1",
@@ -22,6 +23,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.4.16",
     "multer": "^1.4.1",
+    "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
